--- a/ingress.yml
+++ b/ingress.yml
@@ -12,11 +12,13 @@ metadata:
     #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:362977260021:certificate/351e2a24-83bc-409c-b39a-fa63235622fc
     #alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
 spec:
-  rules:
-    - host: php.cv3.co
-      http:
+    rules:
+    - http:
         paths:
-          - path: /*
-            backend:
-              serviceName: php-deploy
-              servicePort: 80
+        - path: /*
+          pathType: Prefix
+          backend:
+            service:
+              name: php-deploy
+              port:
+                number: 80
