--- a/.jenkins/JenkinsFile
+++ b/.jenkins/JenkinsFile
@@ -55,7 +55,8 @@ node () {
 
     stage ('runing QA Suits') {
         sh """
-            tester=`curl http://a497b7b1572e74e7e8a7ddc8a1738844-365667390.us-east-1.elb.amazonaws.com/ |grep -i version |wc -l`
+            dns=`kubectl get services php-deploy-qa -o yaml |yq '.status.loadBalancer.ingress[0].hostname'`
+            tester=`curl http://\${dns}/ |grep -i version |wc -l`
             if [ \${tester} = 1 ]; then
                 echo "pass"
             else
